--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
+apply plugin: "com.google.gms.google-services" //google-services.json
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
