--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.3.0",
+    "@react-native-firebase/auth": "^18.3.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "expo": "~49.0.7",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
